- Completed navigation - Added persistence and reopening - Created flash card schema

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
 // rvest.vs-code-prettier-eslint
 {
     "cSpell.words": [
+        "Quizlet"
     ],
     "editor.codeActionsOnSave": {
         "source.fixAll.eslint": "explicit",
