--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@ai-sdk/google": "^1.0.9",
     "@ai-sdk/openai": "^1.0.8",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-navigation-menu": "^1.2.5",
     "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-radio-group": "^1.2.1",
     "@radix-ui/react-scroll-area": "^1.2.1",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.3",
     "@vercel/analytics": "^1.4.1",
     "@vercel/kv": "^3.0.0",
     "ai": "^4.0.16",
