--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "next": "15.1.0",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
+    "react-card-flip": "^1.2.3",
     "react-dom": "^19.0.0",
     "react-markdown": "^9.0.1",
     "remark-gfm": "^4.0.0",
